class Snippet {
  final String id;
  final String title;
  final String content;
  final String language;
  final DateTime createdAt;

  Snippet({
    required this.id,
    required this.title,
    required this.content,
    required this.language,
    required this.createdAt,
  });

  // TODO: add fromJson, toJson
}
